Update to 1.19, based on 1.18-fixup. (#22)
* Update to 1.19, based on 1.18-fixup.

* Update pack.mcmeta

* Deal with feedback

* Missed a shuffle